Error Mitigation/MagiCoder/Data/java_nio_charset/java_nio_charsetOutputResult.txt
Sample: Charset_1
----------------------------------------------------------------
stdout:
UTF-8

================================================================

Sample: Charset_3
----------------------------------------------------------------
output:
./Data/java_nio_charset/javaFiles/Charset_3.java:15: error: unreported exception CharacterCodingException; must be caught or declared to be thrown
        CharBuffer charBuffer = decoder.decode(byteBuffer);
                                              ^
1 error


================================================================

Sample: Charset_4
----------------------------------------------------------------
stdout:
Encoded bytes: Hello, World!

================================================================

Sample: CharsetDecoder_1
----------------------------------------------------------------
================================================================

Sample: CharsetEncoder_2
----------------------------------------------------------------
stdout:
Is the replacement legal? false

================================================================

Sample: CoderResult_2
----------------------------------------------------------------
stdout:
Is malformed: false

================================================================

Sample: CoderResult_3
----------------------------------------------------------------
stdout:
Is overflow: true

================================================================

Sample: CoderResult_4
----------------------------------------------------------------
stdout:
Is underflow: false

================================================================

Sample: CoderResult_5
----------------------------------------------------------------
stdout:
Is unmappable: false

================================================================

